--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=sprint1
 #Configurações de conexões oracle
 spring.datasource.url=jdbc:oracle:thin:@//oracle.fiap.com.br:1521/ORCL
 spring.datasource.username=${db.user}
-spring.datasource.password=${db.passwd}
+spring.datasource.password=${db.passwb}
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.OracleDialect
 spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
