commit inicial da sprint 3

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=sprint1
+spring.application.name=MottuFind_Java
 
 #Configurações de conexões oracle
 spring.datasource.url=jdbc:oracle:thin:@//oracle.fiap.com.br:1521/ORCL
