Dependencias Thymeleaf e controllers web adicionados

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.jpa.show_sql=true
 spring.jpa.generate-ddl=true
 # Usar a linha abaixo quando quiser apagar os dados anteriores e criar novas tabelas ao inicializar
 spring.jpa.hibernate.ddl-auto=create-drop
+# Thymeleaf - desabilita cache em desenvolvimento
+spring.thymeleaf.cache=false
