--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=MottuFind_Java
 
 #Configurações de conexões oracle
+
 spring.datasource.url=jdbc:oracle:thin:@//oracle.fiap.com.br:1521/ORCL
 spring.datasource.username=${db.user}
 spring.datasource.password=${db.passwb}
@@ -8,8 +9,18 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.OracleDialect
 spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.jpa.show_sql=true
+
+
+# Configuração do Flyway
+spring.flyway.enabled=true
+spring.flyway.url=jdbc:oracle:thin:@//oracle.fiap.com.br:1521/ORCL
+spring.flyway.user=${db.user}
+spring.flyway.password=${db.passwb}
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
+
 # Usar as linhas abaixo quando quiser criar as tabelas apartir das entidades
-spring.jpa.generate-ddl=true
+#spring.jpa.generate-ddl=true
 # Usar a linha abaixo quando quiser apagar os dados anteriores e criar novas tabelas ao inicializar
 spring.jpa.hibernate.ddl-auto=create-drop
 # Thymeleaf - desabilita cache em desenvolvimento
