--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,17 +12,29 @@ spring.jpa.show_sql=true
 
 
 # Configuração do Flyway
-spring.flyway.enabled=true
+
 spring.flyway.url=jdbc:oracle:thin:@//oracle.fiap.com.br:1521/ORCL
 spring.flyway.user=${db.user}
 spring.flyway.password=${db.passwb}
 spring.flyway.locations=classpath:db/migration
-spring.flyway.baseline-on-migrate=true
+
+#Essa propriedade serve para ativarmos o Flyway
+
+spring.flyway.enabled=true
+
+#Essa propriedade para criar uma tabela com as migrações e assim ter acesso ao histórico de modificações.
+
+spring.flyway.baseline-on-migrate=true 
 
 # Usar as linhas abaixo quando quiser criar as tabelas apartir das entidades
+
 #spring.jpa.generate-ddl=true
+
 # Usar a linha abaixo quando quiser apagar os dados anteriores e criar novas tabelas ao inicializar
-spring.jpa.hibernate.ddl-auto=create-drop
+
+#spring.jpa.hibernate.ddl-auto=create-drop
+
+
 # Thymeleaf - desabilita cache em desenvolvimento
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
