--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,11 +28,11 @@ spring.flyway.baseline-on-migrate=true
 
 # Usar as linhas abaixo quando quiser criar as tabelas apartir das entidades
 
-#spring.jpa.generate-ddl=true
+spring.jpa.generate-ddl=true
 
 # Usar a linha abaixo quando quiser apagar os dados anteriores e criar novas tabelas ao inicializar
 
-#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create-drop
 
 
 # Thymeleaf - desabilita cache em desenvolvimento
