--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,28 +11,26 @@ spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.jpa.show_sql=true
 
 
-# Configuração do Flyway
+# ===== CONFIGURAÇÃO PARA RECRIAR O BANCO =====
+spring.jpa.hibernate.ddl-auto=none
+spring.flyway.baseline-on-migrate=true
 
-spring.flyway.url=jdbc:oracle:thin:@//oracle.fiap.com.br:1521/ORCL
-spring.flyway.user=${db.user}
-spring.flyway.password=${db.passwb}
-spring.flyway.locations=classpath:db/migration
+# ===== PERMITE LIMPEZA DO BANCO =====
+spring.flyway.clean-disabled=false
 
-#Essa propriedade serve para ativarmos o Flyway
-
+# ===== Configurações do Flyway =====
 spring.flyway.enabled=true
-
-#Essa propriedade para criar uma tabela com as migrações e assim ter acesso ao histórico de modificações.
-
-spring.flyway.baseline-on-migrate=true 
+spring.flyway.locations=classpath:db/migration
+spring.flyway.validate-on-migrate=true
+spring.flyway.out-of-order=false
 
 # Usar as linhas abaixo quando quiser criar as tabelas apartir das entidades
 
-spring.jpa.generate-ddl=true
+#spring.jpa.generate-ddl=true
 
 # Usar a linha abaixo quando quiser apagar os dados anteriores e criar novas tabelas ao inicializar
 
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create-drop
 
 
 # Thymeleaf - desabilita cache em desenvolvimento
