--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.jpa.show_sql=true
 
 
 # ===== CONFIGURAÇÃO PARA RECRIAR O BANCO =====
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 spring.flyway.baseline-on-migrate=true
 
 # ===== PERMITE LIMPEZA DO BANCO =====
