remoção da pasta API e seus controllers

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=MottuFind_Java
 
 spring.datasource.url=jdbc:oracle:thin:@//oracle.fiap.com.br:1521/ORCL
 spring.datasource.username=${db.user}
-spring.datasource.password=${db.passwb}
+spring.datasource.password=${db.passwd}
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.OracleDialect
 spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
